--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -56,6 +56,19 @@
      <string>Generate</string>
     </property>
    </widget>
+   <widget class="QListView" name="lstIrrPol">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>20</y>
+      <width>256</width>
+      <height>192</height>
+     </rect>
+    </property>
+    <property name="editTriggers">
+     <set>QAbstractItemView::NoEditTriggers</set>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
