--- a/AES-generalised-sboxes/mainwindow.ui
+++ b/AES-generalised-sboxes/mainwindow.ui
@@ -6,49 +6,54 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>867</width>
+    <height>460</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>867</width>
+    <height>460</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>867</width>
+    <height>460</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>AES generalised S-BOXes</string>
   </property>
+  <property name="animated">
+   <bool>false</bool>
+  </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QSpinBox" name="sbDegree">
-    <property name="geometry">
-     <rect>
-      <x>340</x>
-      <y>40</y>
-      <width>42</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <number>1</number>
-    </property>
-    <property name="maximum">
-     <number>15</number>
-    </property>
-   </widget>
    <widget class="QLabel" name="lblDegree">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>20</y>
-      <width>47</width>
-      <height>13</height>
+      <x>40</x>
+      <y>30</y>
+      <width>251</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Degree:</string>
+     <string>Irreducible polynomials of 8 degree</string>
     </property>
    </widget>
    <widget class="QPushButton" name="btnGenerate">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>70</y>
-      <width>75</width>
+      <x>40</x>
+      <y>310</y>
+      <width>261</width>
       <height>23</height>
      </rect>
     </property>
@@ -56,17 +61,63 @@
      <string>Generate</string>
     </property>
    </widget>
-   <widget class="QListView" name="lstIrrPol">
+   <widget class="QTableView" name="tblSBox">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>20</y>
-      <width>256</width>
-      <height>192</height>
+      <x>310</x>
+      <y>50</y>
+      <width>511</width>
+      <height>351</height>
      </rect>
     </property>
-    <property name="editTriggers">
-     <set>QAbstractItemView::NoEditTriggers</set>
+   </widget>
+   <widget class="QListWidget" name="lstIrrPol">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>50</y>
+      <width>256</width>
+      <height>251</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblSbox">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>30</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>S-Box:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblNonLinearity">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>340</y>
+      <width>251</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Non linearity LABEL 
+ asd 
+ asd 
+ asd</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
     </property>
    </widget>
   </widget>
@@ -75,12 +126,18 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
+     <width>867</width>
      <height>21</height>
     </rect>
    </property>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
